# scrapy-common

./: .gitignore  README.md  crawl.py  pyproject.toml  requirements.txt
common/: pipelines.py  settings.py
common/enums/: constant_enum.py  domains.py  modes.py  objectives.py  settings.py  spider_settings.py  strategies.py  tz.py
common/items/: items.py  system_item.py
common/items/my_blog/: my_blog_item.py
common/pipelines/: system_pipeline.py
common/pipelines/my_blog/: my_blog_pipeline.py
common/spiders/my_blog/: my_blog_spider.py  my_blog_utils.py
common/utils/: datetime.py
